fix: get rid of horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app {
   background-color: #eee;
   min-height: 100vh;
-  width: 100vw;
+  /* width: 100vw; */
 }
 
 .search-bar-container {
